--- a/Flutter App/wine_prediction_app/pubspec.yaml
+++ b/Flutter App/wine_prediction_app/pubspec.yaml
@@ -65,6 +65,7 @@ flutter:
     - assets/winewoman.png
     - assets/new-wine.gif
     - assets/wine-glass.jpg
+    - assets/glass-wine.jpg
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
